Enhance README and AGENTS.md with setup guides, arena configs, RFID details, troubleshooting, and ICY kernel documentation
Gathered from micecraft.org, livemousetracker.org, CENTURI wiki, binary
distribution analysis (build 1266), and ICY kernel source (v1.9.10.0).

README: Add Getting Started, Arena Configuration, RFID Setup, Multi-Setup
Room Config, External Event Integration, Troubleshooting, Historical Context
sections. Expand Hardware Requirements, USV Analysis, Analysis Ecosystem
(with USV Toolbox, MiceCraft, author attributions). Update ICY Kernel section
with local source details. Fix pyinstaller typo.

AGENTS.md: Fix Sequence line count (8689→7192), add line counts to API table,
clarify local ICY kernel copy, add launch mechanism (bat file, LMTLauncher,
JVM params), add arena config/RFID hardware/network protocols subsections,
clarify PluginBundled purpose.